fix(site): Fix styles to avoid horizontal scroll

--- a/packages/site/src/pages/index.scss
+++ b/packages/site/src/pages/index.scss
@@ -19,9 +19,6 @@ body {
 }
 
 #gatsby-focus-wrapper {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 	position: relative;
 }
 
@@ -38,6 +35,7 @@ main {
 	padding-top: 4rem;
 	flex-shrink: 0;
 	flex-grow: 0;
+	margin-inline: auto;
 }
 
 footer {
